[package]
name = "sudbury"
version = "0.1.0"
authors = ["Dan Ravensloft <dan.ravensloft@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaxpeax-arch = "0.0.4"
# yaxpeax-ia64 = "0.1.2"
yaxpeax-ia64 = { path = "../yaxpeax-ia64" }
